@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-07T16:15:47Z",
-  "count_outdated" : 2457,
-  "uniques_outdated" : 788,
+  "timestamp" : "2024-05-08T16:17:24Z",
+  "count_outdated" : 2460,
+  "uniques_outdated" : 790,
   "count" : 2475,
   "uniques" : 798,
   "views" : [
-    {
-      "timestamp": "2024-04-24T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-04-26T00:00:00Z",
       "count": 1,
