@@ -1,12 +1,7 @@
 {
-  "count": 18,
-  "uniques": 10,
+  "count": 15,
+  "uniques": 8,
   "views": [
-    {
-      "timestamp": "2024-04-24T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-04-26T00:00:00Z",
       "count": 1,
